--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -30,15 +30,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="about.html">Cosa è ?</a></li>
-            <li><a href="news.html">News</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">I marchi mondiali<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li role="separator" class="divider"></li>
                   <li><a href="johndeere.html">John Deere</a></li>
                   <li><a href="fendt.html">Fendt</a></li>
-                  <li><a href="deutz.html">Deutz-Fahr</a></li>
+                  <li><a href="cnh.html">CNH</a></li>
               </ul>
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">I marchi italiani<span class="caret"></span></a>
@@ -46,7 +44,7 @@
                 <li role="separator" class="divider"></li>
                   <li><a href="fiat.html">Fiat</a></li>
                   <li><a href="landini.html">Landini</a></li>
-                  <li><a href="lamborghini.html">Lamborghini</a></li>
+                  <li><a href="same.html">Same</a></li>
               </ul>
               <li class="dropdown">
                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Storia dei trattori<span class="caret"></span></a>
@@ -60,24 +58,24 @@
           </ul>
         </div>
       </div>
-    </nav> 
+    </nav>
 <section class="section-white">
   <div class="container">
 
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
+  
       <ol class="carousel-indicators">
         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
       </ol>
 
-      <!-- Wrapper for slides -->
+     
       <div class="carousel-inner">
-        <div class="item active"><a href="news.html">
+        <div class="item active"><a href="same.html">
           <img src="image/pag1.jpg">
           </a><div class="carousel-caption">
-            <h2>News</h2>
+            <h2>Same</h2>
           </div>
         </div>
         <div class="item"><a href="landini.html">
@@ -121,7 +119,7 @@
         <div class="col-md-4">
           <h2>Meccanizzazione agricola</h2>
           <p>La meccanizzazione agricola è un processo che è ancora tutt'oggi è in atto nel mondo quando è avvenuta in italia ... 
-          <p><a class="btn btn-default" href="mechanical" role="button">Clicca e scorpi di più &raquo;</a></p>
+          <p><a class="btn btn-default" href="mechanical.html" role="button">Clicca e scorpi di più &raquo;</a></p>
         </div>
       </div>
 
