--- a/Bootstrap/mechanical.html
+++ b/Bootstrap/mechanical.html
@@ -32,37 +32,36 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="about.html">Cosa è ?</a></li>
-            <li><a href="credits.html">Credits</a></li>
+            <li><a href="news.html">News</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">I marchi mondiali<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li role="separator" class="divider"></li>
                   <li><a href="johndeere.html">John Deere</a></li>
                   <li><a href="fendt.html">Fendt</a></li>
-                  <li><a href="deutz.html">Deutz-Fahr</a></li>
+                  <li><a href="cnh.html">CNH</a></li>
               </ul>
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">I marchi italiani<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li role="separator" class="divider"></li>
                   <li><a href="fiat.html">Fiat</a></li>
+                  <li><a href="landini.html">Landini</a></li>
                   <li><a href="same.html">Same</a></li>
-                  <li><a href="lamborghini.html">Lamborghini</a></li>
               </ul>
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Storia dei trattori<span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li role="separator" class="divider"></li>
-                  <li><a href="history.html">Quando sono nai i tratori?</a></li>
-                  <li><a href="mechanical.html">La mecchanizzazione agricola</a></li>
-              
-              </ul>
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Storia dei trattori<span class="caret"></span></a>
+               <ul class="dropdown-menu">
+                 <li role="separator" class="divider"></li>
+                   <li><a href="history.html">Quando sono nati i tratori?</a></li>
+                   <li><a href="mechanical.html">La mecchanizzazione agricola italiana</a></li><ul class="nav navbar-nav navbar-right">
+               </ul>
+              </ul>              
             </li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
-    </nav>
+    </nav> 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     
     <script src="js/bootstrap.min.js"></script>
