--- a/Tracktorland/same.html
+++ b/Tracktorland/same.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+     <meta charset="UTF-8">
+    <meta name="description" content="TractorLand, the land of tractor">
+    <meta name="keywords" content="Tracktorland,Tractorland,same,trattori,trattrici,">
+    <meta name="author" content="Doldi Riccardo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
