--- a/naplesWebSite/index.html
+++ b/naplesWebSite/index.html
@@ -14,10 +14,10 @@
 		</header>
 		<section>
 			<nav>
-				<a href="pompei.html">Pompei</a>
-				<a href="amalfi.html">Amalfi</a>
-				<a href="positano.html">Positano</a>
-				<a href="caserta.html">Caserta</a>
+				<a class= "button" href="pompei/pompei.html">Pompei</a>
+				<a class= "button" href="amalfi/amalfi.html">Amalfi</a>
+				<a class= "button" href="positano/positano.html">Positano</a>
+				<a class= "button" href="caserta/caserta.html">Caserta</a>
 			</nav>
       <img id="mainIMG" src="img/naplesHome.jpg">
 		</section>
